--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^14.2.0",
     "ethers": "^5.5.3",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.27",
     "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
